add library deps

--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Arduino library for the ICM20649 sensors in the Adafruit shop
 category=Sensors
 url=https://github.com/adafruit/Adafruit_ICM20649
 architectures=*
+depends=Adafruit BusIO, Adafruit Unified Sensor
