--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -28,5 +28,5 @@ jobs:
     - name: doxygen
       env:
         GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-        PRETTYNAME : "Adafruit ICM20649 Sensor Library"
+        PRETTYNAME : "Adafruit ICM20X Sensor Library"
       run: bash ci/doxy_gen_and_deploy.sh
