--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Adafruit ICM20649
-version=1.0.4
+name=Adafruit ICM20X
+version=2.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
-sentence=Arduino library for the ICM20649 sensors in the Adafruit shop
-paragraph=Arduino library for the ICM20649 sensors in the Adafruit shop
+sentence=Arduino library for the ICM20X Family sensors in the Adafruit shop
+paragraph=Arduino library for the ICM20X Family sensors in the Adafruit shop
 category=Sensors
-url=https://github.com/adafruit/Adafruit_ICM20649
+url=https://github.com/adafruit/Adafruit_ICM20X
 architectures=*
 depends=Adafruit BusIO, Adafruit Unified Sensor
